--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.16.15",
     "next": "14.0.3",
     "prop-types": "^15.8.1",
     "react": "^18",
