--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nodemailer": "^6.9.7",
     "prop-types": "^15.8.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "eslint": "^8",
