--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^10.16.15",
     "next": "14.0.3",
+    "next-intl": "^3.4.2",
     "nodemailer": "^6.9.7",
     "prop-types": "^15.8.1",
     "react": "^18",
